Closed Bug 1312667 Opened 8 years ago Closed 8 years ago

IonMonkey: MIPS64: Fix build issues

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: hev, Assigned: hev)

Details

Attachments

(1 file)

In file included from /home/heiher/git/mips64/gecko-dev/js/src/jit/MacroAssembler.h:26:0,
                 from /home/heiher/git/mips64/gecko-dev/js/src/jit/BaselineJIT.h:18,
                 from /home/heiher/git/mips64/gecko-dev/js/src/vm/TypeInference-inl.h:19,
                 from /home/heiher/git/mips64/gecko-dev/js/src/jsobjinlines.h:33,
                 from /home/heiher/git/mips64/gecko-dev/js/src/jsatom.cpp:28:
/home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/MacroAssembler-mips64.h: In member function ‘void js::jit::MacroAssemblerMIPS64Compat::pushValue(const JS::Value&)’:
/home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/MacroAssembler-mips64.h:501:9: error: ‘jsval_layout’ was not declared in this scope
         jsval_layout jv = JSVAL_TO_IMPL(val);
         ^~~~~~~~~~~~
/home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/MacroAssembler-mips64.h:504:34: error: ‘jv’ was not declared in this scope
             movWithPatch(ImmWord(jv.asBits), ScratchRegister);
                                  ^~
/home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/MacroAssembler-mips64.h:507:26: error: ‘jv’ was not dec
lared in this scope
             push(ImmWord(jv.asBits));
                          ^~


/home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/Assembler-mips64.cpp: In function ‘void TraceOneDataRel
ocation(JSTracer*, js::jit::Instruction*)’:
/home/heiher/git/mips64/gecko-dev/js/src/jit/mips64/Assembler-mips64.cpp:183:88: error: reinterpret_cast fr
om type ‘const void**’ to type ‘js::gc::Cell**’ casts away qualifiers
         TraceManuallyBarrieredGenericPointerEdge(trc, reinterpret_cast<gc::Cell**>(&ptr),
Comment on attachment 8804164 [details] [diff] [review]
0001-Bug-1312667-IonMonkey-MIPS64-Fix-build-issues.-r-ara.patch

Review of attachment 8804164 [details] [diff] [review]:
-----------------------------------------------------------------

Thank you for following up!
Attachment #8804164 - Flags: review?(arai.unmht) → review+
Pushed by r@hev.cc:
https://hg.mozilla.org/integration/mozilla-inbound/rev/1443a457e5ee
IonMonkey: MIPS64: Fix build issues. r=arai
https://hg.mozilla.org/mozilla-central/rev/1443a457e5ee
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: