Bug 1312667 - IonMonkey: MIPS64: Fix build issues. r=arai

---
 js/src/jit/mips64/Assembler-mips64.cpp    | 2 +-
 js/src/jit/mips64/MacroAssembler-mips64.h | 5 ++---
 2 files changed, 3 insertions(+), 4 deletions(-)